--- a/data/projects.json
+++ b/data/projects.json
@@ -1,9 +1,16 @@
 [
     {
+        "title": "PLC-Based Conveyor Positioning Training Module",
+        "year": "2025",
+        "fund": "",
+        "partner": "",
+        "description": "This project involved developing a PLC program to control a conveyor system that moves to a specific position based on distance input in centimeters using sensor feedback. The HMI was designed to allow users to input parameters, monitor system status, and control conveyor operation in real time. The system was tested and debugged to ensure accurate positioning, stable PLC–HMI communication, and reliable operation for training purposes.",
+        "image": "images/12.jpeg",
+        "link": "https://drive.google.com/drive/folders/1eSvxiW6krOm1n6o1ddiQOireA-Gx5v2t?usp=drive_link"
+    },
+    {
         "title": "Local web-based energy monitoring using a wireless protocol",
         "year": "2025",
-        "fund": "Rp 5.000.000,00",
-        "partner": "PT Djarum",
         "description": "A system that measures electrical energy using a power meter, processes the data with a Raspberry Pi, and presents the energy usage through a local web-based interface.",
         "image": "images/project1.png",
         "link": "https://drive.google.com/drive/folders/15uAcITJEly0tq98wVcUuCwNXUqiKk37b?usp=sharing"
@@ -11,8 +18,6 @@
     {
         "title": "Chicken Egg Incubator Using AC Lamp and PID Control Prototype",
         "year": "2025",
-        "fund": "Rp 150.000,00",
-        "partner": "Politeknik Negeri Semarng",
         "description": "A monitoring and control system utilizing the DS18B20 temperature sensor to maintain a stable chicken coop environment, ensuring optimal growth, health, and productivity of the chickens through consistent temperature regulation.",
         "image": "images/project4.png",
         "link": "https://drive.google.com/drive/folders/1yZ3HUfo4hwXHOPtmR3bkhXhwybeKwJfK?usp=sharing"
@@ -20,22 +25,18 @@
     {
         "title": "Line Follower Robot",
         "year": "2024",
-        "fund": "Rp 500.000,00",
-        "partner": "Politeknik Negeri Semarng",
         "description": "Designed and implemented an autonomous line-following robot using infrared sensors and ATMega32 microcontroller. The system was programmed to detect and follow a predefined path accurately, with real-time motor control based on sensor feedback.",
         "image": "images/project2.jpg",
         "link": ""
     },
-        {
+    {
         "title": "Automatic Door and Welcome Bell Prototype",
         "year": "2024",
-        "fund": "Rp 200.000,00",
-        "partner": "Politeknik Negeri Semarng",
         "description": "Designed and implemented a door system equipped with infrared and ultrasonic sensors to accurately detect the presence of people, triggering both the automatic door mechanism and a greeting bell to enhance convenience and user experience.",
         "image": "images/project3.png",
         "link": ""
     }
-    ]
+]
 
 
 
